@@ -27,6 +27,8 @@
 set_full_path(THIS_DIR_HEADERS
   compound_data_reader.hpp
   data_reader.hpp
+  metadata.hpp
+  # Data readers
   data_reader_cifar10.hpp
   data_reader_csv.hpp
   data_reader_image.hpp
