@@ -26,6 +26,7 @@
 # Add the source files for this directory
 set_full_path(THIS_DIR_SOURCES
   data_reader.cpp
+  metadata.cpp
   data_reader_cifar10.cpp
   data_reader_csv.cpp
   data_reader_image.cpp
