@@ -25,11 +25,14 @@
 //
 ////////////////////////////////////////////////////////////////////////////////
 
-#include "lbann/data_store/data_store_conduit.hpp"
+#include <conduit/conduit.hpp>
+#include <conduit/conduit_relay.hpp>
+#include <conduit/conduit_relay_io_hdf5.hpp>
+
 #include "lbann/comm_impl.hpp"
+#include "lbann/data_store/data_store_conduit.hpp"
 
 #include "lbann/data_readers/data_reader_image.hpp"
-#include "lbann/data_readers/data_reader_jag_conduit.hpp"
 #include "lbann/data_readers/sample_list_impl.hpp"
 #include "lbann/utils/commify.hpp"
 #include "lbann/utils/distconv.hpp"
